--- a/frontend/tap-in/src/index.css
+++ b/frontend/tap-in/src/index.css
@@ -1,1 +1,46 @@
 /* TODO Add site wide styles */
+button {
+    color: white;
+    background-color:#fc0;
+    border-radius: 40px;
+    margin-top: 5px;
+
+
+
+}
+header {
+    background-color: #fc0;
+    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    height: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: heavy;
+}
+
+.navi {
+    display: grid;
+    grid-template-columns: repeat(7, auto);
+    grid-area: 'logo thepub toprated supporters help profilepic searchbar';
+    align-items: center;
+    max-width: 1048px;
+    margin: 0 auto;
+    padding: 0 12px;
+    height: 52px;
+    position: relative;
+
+
+}
+.profilepic{
+    display: flex;
+    justify-self: flex-end;
+    margin-right: 2px;
+}
+img {
+    height: 36px;
+    width: 36px;
+    border-radius: 50px;
+}
