--- a/frontend/tap-in/src/components/Navigation/Navigation.css
+++ b/frontend/tap-in/src/components/Navigation/Navigation.css
@@ -6,6 +6,19 @@
     height: 100vh;
     width: 100vw;
 }
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    /* align-content: center; */
+    background-color: #fc0;
+
+}
+.nav-right {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 30vw
+}
 
 
 .nav-btn {
