--- a/frontend/tap-in/src/index.css
+++ b/frontend/tap-in/src/index.css
@@ -1,7 +1,8 @@
 /* TODO Add site wide styles */
-/* body {
-    background-image: url(https://www.porchdrinking.com/wp-content/uploads/2017/03/untappd.jpg);
-} */
+body {
+    margin: 0;
+    /* background-image: url(https://www.porchdrinking.com/wp-content/uploads/2017/03/untappd.jpg); */
+}
 
 button {
     color: white;
